[package]
name = "stellar-rpc-client"
description = "Stellar RPC client for rust"
homepage = "https://github.com/stellar/rs-stellar-rpc-client"
repository = "https://github.com/stellar/rs-stellar-rpc-client"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
readme = "README.md"
version = "25.1.0"
edition = "2021"
rust-version = "1.85.0"
autobins = false

[lib]
crate-type = ["rlib"]

[dependencies]
stellar-strkey = "0.0.15"
stellar-xdr = { version = "25.0.0", features = ["curr", "std", "serde", "base64"] }
termcolor = "1.1.3"
termcolor_output = "1.0.1"
clap = { version = "4.1.8", features = ["derive"] }
serde_json = "1.0.82"
serde-aux = "4.1.2"
itertools = "0.10.0"
hex = "0.4.3"
thiserror = "1.0.46"
serde = "1.0.82"
serde_with = "3.9.0"
tokio = { version = "1.51.0", features = ["rt", "io-util", "time", "macros", "sync"] }
sha2 = "0.10.7"
http = "1.0.0"

# branch = "wasip2-support"
jsonrpsee-http-client = { git = "https://github.com/warp-driver/jsonrpsee", rev="8a1a7f45c29227c2b92c010e9b870723e0f444d4", default-features = false, features = ["tls-rustcrypto"] }
jsonrpsee-core = { git = "https://github.com/warp-driver/jsonrpsee", rev="8a1a7f45c29227c2b92c010e9b870723e0f444d4", features = ["client"] }
